--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Titanik Syla",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.5.1",
+    "sequelize": "^6.32.1"
   }
 }
